--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 }
 
 .headline {
-  font-size: 2.25rm;
+  font-size: 2.25rem; /* Correto agora, ajuste conforme necessário */
   color: #ffffff;
   margin: 30px 0;
   font-weight: bold;
@@ -52,13 +52,41 @@ body {
   overflow: hidden;
 }
 
-.video-container iframe {
+/* .video-container iframe {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+} */
+
+/* style.css */
+
+.image-container {
+  position: relative;
+  margin: 30px 0;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
 }
+
+.image {
+  width: 100%;
+  height: auto;
+}
+
+/* Gradiente transparente no centro, escurecendo para as bordas */
+.gradient-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 0.5) 100%);
+  border-radius: 8px; /* Mantém o bordo arredondado consistente com o container */
+  z-index: 2; /* Aumentei para 2 para garantir que fique sobre a imagem */
+}
+
 
 .cta-button {
   display: inline-block;
