--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body {
 }
 
 .image {
-  width: 100%;
+  width: 70%;
   height: auto;
 }
 
@@ -96,14 +96,15 @@ body {
   color: #fff;
   text-decoration: none;
   border-radius: 5px;
-  margin: 30px 0;
+  margin: 0 10px;
   font-weight: bold;
   transition: all 0.3s;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  animation: pulsate 1s infinite;
 }
 
 .cta-button:hover {
-  background-color: #ffc052;
+  background-color: #ffc052;/*#ffc052*/
   transform: scale(1.05);
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
 }
@@ -129,7 +130,20 @@ body {
       font-size: 1.8em;
   }
 
+  .image-container {
+      margin: 4px 0;
+  }
+
+  .image {
+    width: 100%;
+  }
+
   .cta-button {
+    font-size: 1em;
+    padding: 15px 30px;
+    border-radius: 30px;
     animation: pulsate 1s infinite;
+    background-color: #2ca00f;
+    font-weight: 500;
   }
 }
